--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.1",
+    "react-slider": "^2.0.6",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
